# Automated-Journaling-Trade-Analytics

./: README.md
client/: package-lock.json  package.json
client/src/: Account.tsx  App.tsx  (+4 more)
docs/: ServerArchitecture.puml  UserSequence.puml
server/: README.md  template.yaml
src/apps/server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/apps/server/.cargo/: config.toml
src/apps/server/api/: mod.rs  trade.rs
src/apps/server/crates/libs/lib-core/src/model/: apikey.rs  exchange.rs  journal.rs  mod.rs  tag.rs  thread.rs  trade.rs  tradetag.rs  user.rs
src/apps/server/crates/libs/lib-core/src/model/base/: crud_fns.rs  mod.rs
src/apps/server/crates/libs/lib-rpc/src/rpcs/: apikey_rpc.rs  exchange_rpc.rs  journal_rpc.rs  mod.rs  tag_rpc.rs  thread_rpc.rs  trade_rpc.rs  tradetag_rpc.rs
src/apps/server/crates/services/web-server/examples/: quick_dev.rs
src/apps/server/examples/: gen_key.rs  quick_dev.rs
src/apps/server/rust_app/: Cargo.toml
src/apps/server/sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
src/apps/server/src/: config.rs  error.rs  log.rs  main.rs  model.rs
src/apps/server/src/_dev_utils/: dev_db.rs  mod.rs
src/apps/server/src/api/: trade.rs
src/apps/server/src/crypt/: error.rs
src/apps/server/src/ctx/: mod.rs
src/apps/server/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/apps/server/src/model/store/: mod.rs
src/apps/server/src/utils/: mod.rs
src/apps/server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_tickets.rs
src/apps/server/tests/: quick_dev.rs
(+82 files in other folders)
